# MagmaVK

./: CMakeLists.txt  main.cpp  utils.cpp  utils.h
shaders/: vertex.spv  vertex.vert
src/: commands.cpp  commands.h  device.cpp  device.h  framebuffer.cpp  framebuffer.h  initializers.h  pipeline.cpp  pipeline.h  renderpass.cpp  renderpass.h  swapchain.cpp  swapchain.h  synchronization.cpp  synchronization.h  vulkan.cpp  vulkan.h
